[package]
name = "python"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.22", features = ["blocking"] }
tokio = { version = "1.28", features = ["macros"] }
walkdir = "2.4"
zip = "0.6"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3.30"
kinode_lib = { path = "../../../kinode" }
#kinode_lib = { git = "https://github.com/kinode-dao/kinode", rev = "a5d30e2" }
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.21"
url = "2.2.2"
